Reefact.BookExamples.Antlr4/Chapter_06/3/.antlr/DOTParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DOT.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class DOTParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, STRICT=11, GRAPH=12, DIGRAPH=13, NODE=14, EDGE=15, SUBGRAPH=16, 
		ID=17, NUMBER=18, STRING=19, HTML_STRING=20, PREPROC=21;
	public const int
		RULE_graph = 0, RULE_stmt_list = 1, RULE_stmt = 2, RULE_attr_stmt = 3, 
		RULE_attr_list = 4, RULE_a_list = 5, RULE_edge_stmt = 6, RULE_edgeRHS = 7, 
		RULE_edgeop = 8, RULE_node_stmt = 9, RULE_node_id = 10, RULE_port = 11, 
		RULE_subgraph = 12, RULE_id = 13;
	public static readonly string[] ruleNames = {
		"graph", "stmt_list", "stmt", "attr_stmt", "attr_list", "a_list", "edge_stmt", 
		"edgeRHS", "edgeop", "node_stmt", "node_id", "port", "subgraph", "id"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "';'", "'='", "'['", "']'", "','", "'->'", "'--'", 
		"':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "STRICT", 
		"GRAPH", "DIGRAPH", "NODE", "EDGE", "SUBGRAPH", "ID", "NUMBER", "STRING", 
		"HTML_STRING", "PREPROC"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DOT.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DOTParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DOTParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DOTParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class GraphContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Stmt_listContext stmt_list() {
			return GetRuleContext<Stmt_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GRAPH() { return GetToken(DOTParser.GRAPH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGRAPH() { return GetToken(DOTParser.DIGRAPH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRICT() { return GetToken(DOTParser.STRICT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public GraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_graph; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterGraph(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitGraph(this);
		}
	}

	[RuleVersion(0)]
	public GraphContext graph() {
		GraphContext _localctx = new GraphContext(Context, State);
		EnterRule(_localctx, 0, RULE_graph);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STRICT) {
				{
				State = 28;
				Match(STRICT);
				}
			}

			State = 31;
			_la = TokenStream.LA(1);
			if ( !(_la==GRAPH || _la==DIGRAPH) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0) {
				{
				State = 32;
				id();
				}
			}

			State = 35;
			Match(T__0);
			State = 36;
			stmt_list();
			State = 37;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stmt_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public Stmt_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterStmt_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitStmt_list(this);
		}
	}

	[RuleVersion(0)]
	public Stmt_listContext stmt_list() {
		Stmt_listContext _localctx = new Stmt_listContext(Context, State);
		EnterRule(_localctx, 2, RULE_stmt_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 2084866L) != 0) {
				{
				{
				State = 39;
				stmt();
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__2) {
					{
					State = 40;
					Match(T__2);
					}
				}

				}
				}
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Node_stmtContext node_stmt() {
			return GetRuleContext<Node_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Edge_stmtContext edge_stmt() {
			return GetRuleContext<Edge_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attr_stmtContext attr_stmt() {
			return GetRuleContext<Attr_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubgraphContext subgraph() {
			return GetRuleContext<SubgraphContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 4, RULE_stmt);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				node_stmt();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49;
				edge_stmt();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50;
				attr_stmt();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 51;
				id();
				State = 52;
				Match(T__3);
				State = 53;
				id();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 55;
				subgraph();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attr_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Attr_listContext attr_list() {
			return GetRuleContext<Attr_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GRAPH() { return GetToken(DOTParser.GRAPH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NODE() { return GetToken(DOTParser.NODE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EDGE() { return GetToken(DOTParser.EDGE, 0); }
		public Attr_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attr_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterAttr_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitAttr_stmt(this);
		}
	}

	[RuleVersion(0)]
	public Attr_stmtContext attr_stmt() {
		Attr_stmtContext _localctx = new Attr_stmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_attr_stmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			_la = TokenStream.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 53248L) != 0) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 59;
			attr_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attr_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public A_listContext[] a_list() {
			return GetRuleContexts<A_listContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public A_listContext a_list(int i) {
			return GetRuleContext<A_listContext>(i);
		}
		public Attr_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attr_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterAttr_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitAttr_list(this);
		}
	}

	[RuleVersion(0)]
	public Attr_listContext attr_list() {
		Attr_listContext _localctx = new Attr_listContext(Context, State);
		EnterRule(_localctx, 8, RULE_attr_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 61;
				Match(T__4);
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0) {
					{
					State = 62;
					a_list();
					}
				}

				State = 65;
				Match(T__5);
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class A_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public A_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_a_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterA_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitA_list(this);
		}
	}

	[RuleVersion(0)]
	public A_listContext a_list() {
		A_listContext _localctx = new A_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_a_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 70;
				id();
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__3) {
					{
					State = 71;
					Match(T__3);
					State = 72;
					id();
					}
				}

				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__6) {
					{
					State = 75;
					Match(T__6);
					}
				}

				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Edge_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EdgeRHSContext edgeRHS() {
			return GetRuleContext<EdgeRHSContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Node_idContext node_id() {
			return GetRuleContext<Node_idContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubgraphContext subgraph() {
			return GetRuleContext<SubgraphContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attr_listContext attr_list() {
			return GetRuleContext<Attr_listContext>(0);
		}
		public Edge_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edge_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterEdge_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitEdge_stmt(this);
		}
	}

	[RuleVersion(0)]
	public Edge_stmtContext edge_stmt() {
		Edge_stmtContext _localctx = new Edge_stmtContext(Context, State);
		EnterRule(_localctx, 12, RULE_edge_stmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
			case NUMBER:
			case STRING:
			case HTML_STRING:
				{
				State = 82;
				node_id();
				}
				break;
			case T__0:
			case SUBGRAPH:
				{
				State = 83;
				subgraph();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 86;
			edgeRHS();
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 87;
				attr_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EdgeRHSContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EdgeopContext[] edgeop() {
			return GetRuleContexts<EdgeopContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EdgeopContext edgeop(int i) {
			return GetRuleContext<EdgeopContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Node_idContext[] node_id() {
			return GetRuleContexts<Node_idContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Node_idContext node_id(int i) {
			return GetRuleContext<Node_idContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubgraphContext[] subgraph() {
			return GetRuleContexts<SubgraphContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubgraphContext subgraph(int i) {
			return GetRuleContext<SubgraphContext>(i);
		}
		public EdgeRHSContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edgeRHS; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterEdgeRHS(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitEdgeRHS(this);
		}
	}

	[RuleVersion(0)]
	public EdgeRHSContext edgeRHS() {
		EdgeRHSContext _localctx = new EdgeRHSContext(Context, State);
		EnterRule(_localctx, 14, RULE_edgeRHS);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 90;
				edgeop();
				State = 93;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case ID:
				case NUMBER:
				case STRING:
				case HTML_STRING:
					{
					State = 91;
					node_id();
					}
					break;
				case T__0:
				case SUBGRAPH:
					{
					State = 92;
					subgraph();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__7 || _la==T__8 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EdgeopContext : ParserRuleContext {
		public EdgeopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edgeop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterEdgeop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitEdgeop(this);
		}
	}

	[RuleVersion(0)]
	public EdgeopContext edgeop() {
		EdgeopContext _localctx = new EdgeopContext(Context, State);
		EnterRule(_localctx, 16, RULE_edgeop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			_la = TokenStream.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Node_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Node_idContext node_id() {
			return GetRuleContext<Node_idContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attr_listContext attr_list() {
			return GetRuleContext<Attr_listContext>(0);
		}
		public Node_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_node_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterNode_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitNode_stmt(this);
		}
	}

	[RuleVersion(0)]
	public Node_stmtContext node_stmt() {
		Node_stmtContext _localctx = new Node_stmtContext(Context, State);
		EnterRule(_localctx, 18, RULE_node_stmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			node_id();
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 102;
				attr_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Node_idContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PortContext port() {
			return GetRuleContext<PortContext>(0);
		}
		public Node_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_node_id; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterNode_id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitNode_id(this);
		}
	}

	[RuleVersion(0)]
	public Node_idContext node_id() {
		Node_idContext _localctx = new Node_idContext(Context, State);
		EnterRule(_localctx, 20, RULE_node_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			id();
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 106;
				port();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PortContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public PortContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_port; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterPort(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitPort(this);
		}
	}

	[RuleVersion(0)]
	public PortContext port() {
		PortContext _localctx = new PortContext(Context, State);
		EnterRule(_localctx, 22, RULE_port);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(T__9);
			State = 110;
			id();
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 111;
				Match(T__9);
				State = 112;
				id();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubgraphContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Stmt_listContext stmt_list() {
			return GetRuleContext<Stmt_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUBGRAPH() { return GetToken(DOTParser.SUBGRAPH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public SubgraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_subgraph; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.EnterSubgraph(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDOTListener typedListener = listener as IDOTListener;
			if (typedListener != null) typedListener.ExitSubgraph(this);
		}
	}

	[RuleVersion(0)]
	public SubgraphContext subgraph() {
		SubgraphContext _localctx = new SubgraphContext(Context, State);
		EnterRule(_localctx, 24, RULE_subgraph);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SUBGRAPH) {
				{
				State = 115;
				Match(SUBGRAPH);
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0) {
					{
					State = 116;
					id();
					}
				}

				}
			}

			State = 121;
			Match(T__0);
			State = 122;
			stmt_list();
			State = 123;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
